# netdisco

./: .gitattributes  .gitignore  .travis.yml  .travis.yml.disabled  Build.PL  Changes  DEVELOPING.pod  DEVELOPING.txt  Dockerfile  LICENSE.md  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README.md  README.pod  README.txt  SECURITY.md  TODO
.circleci/: config.yml
.docker/hooks/: post_push
.github/: dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build-and-publish.yml  codeql-analysis.yml  dependabot-automerge.yml  deploy-demodb.yml  docker.yml  release.yml  runtests.yml  test.yml  test_and_publish.yml  uploadtarball.yml
Netdisco/: Changes  DEVELOPING.pod  LICENCE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  config.yml
Netdisco/environments/: development.yml  production.yml
Netdisco/lib/: Netdisco.pm
Netdisco/public/: 500.html
Netdisco/share/: config.yml
Netdisco/t/: 10-sort_port.t  11-netdisco-util.t  11-portsort.t  11-sort_port.t  11-webtoolkit.base64.t  netdisco-util.html  sort-port.html  webtoolkit.base64.html
Netdisco/views/: device.tt  index.tt  inventory.tt  report.tt  search.tt
Web-Plugin-Observium/: Changes  MANIFEST  META.yml  Makefile  Makefile.PL
Web-Plugin-RANCID/: Changes  MANIFEST  META.yml  Makefile  Makefile.PL
docker/: Dockerfile  docker-compose.yml
docker/hooks/: build
docker/netdisco-backend/: Dockerfile
docker/netdisco-base/: Dockerfile  deployment.yml  wait_to_start.sh
docker/netdisco-do/: Dockerfile
docker/netdisco-postgresql/: Dockerfile  netdisco-db-entrypoint.sh
docker/netdisco-web/: Dockerfile
lib/App/: Netdisco.pm
share/: config.yml
share/environments/: deployment.yml
share/public/: 500.html  dispatch.cgi
share/python/cipactli/: pyproject.toml
share/python/cipactli/cipactli/: runner.py
share/python/cipactli/cipactli/workers/: linter.py  notfound.py
share/python/netdisco/: .pre-commit-config.yaml  poetry.toml  pyproject.toml  ruff.toml
share/python/netdisco/netdisco/: runner.py
share/python/netdisco/netdisco/util/: config.py  configuration.py  database.py  job.py  log.py  perl.py  ssh.py  stash.py  status.py  worklet.py
share/python/netdisco/netdisco/worker/: linter.py
share/python/netdisco/netdisco/worklet/arpnip/nodes/main/cli/: linux.py
share/python/netdisco/netdisco/worklet/discover/neighbors/routed/main/cli/: juniper_junos.py
share/python/netdisco/netdisco/worklet/discover/nexthopneighbors/main/cli/: juniper_junos.py
share/python/netdisco/netdisco/worklet/expire/: early.py
share/python/netdisco/netdisco/worklet/linter/: main.py
share/python/netdisco/netdisco/worklet/snapshot/: main.py  store.py
share/python/netdisco/netdisco/worklet/stats/: early.py
share/schema_versions/: App-Netdisco-DB-17-18-PostgreSQL.sql  App-Netdisco-DB-23-24-PostgreSQL.sql  App-Netdisco-DB-25-26-PostgreSQL.sql  App-Netdisco-DB-28-29-PostgreSQL.sql  App-Netdisco-DB-29-30-PostgreSQL.sql  App-Netdisco-DB-30-31-PostgreSQL.sql  App-Netdisco-DB-32-33-PostgreSQL.sql  App-Netdisco-DB-35-36-PostgreSQL.sql  App-Netdisco-DB-40-41-PostgreSQL.sql  App-Netdisco-DB-41-42-PostgreSQL.sql  App-Netdisco-DB-42-43-PostgreSQL.sql  App-Netdisco-DB-43-44-PostgreSQL.sql  App-Netdisco-DB-44-45-PostgreSQL.sql  (+54 more)
t/: 20-checkacl.t
xt/: 00-compile.t  01-local-pod.t  10-sort_port.t  11-portsort.t  20-checkacl.t  21-check_acl_no_ipaddr_only.t  21-whereacl.t  30-backend-workers.t  40-config-override.t
(+1077 files in other folders)
