[project]
name = "netdisco"
version = "1.0.0"
description = "Python code and dependencies for Netdisco"
authors = [{ name = "Netdisco Developers" }]
requires-python = ">=3.9"
dependencies = [
    "yamllint>=1.35.1,<2",
    "yamale>=5.2.1,<6",
    "netmiko>=4.6.0,<5",
    "cryptography>=48.0.0,<49",
    "virtualenv>=20.26.6",
    "sqlalchemy>=2.0.37,<3",
    "psycopg>=3.2.13,<4",
    "uv-build>=0.9.4,<0.10.0",
]

[project.scripts]
run_worklet = "netdisco.runner:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
develop = ["pre-commit>=4.3.0,<5"]
test = ["ruff>=0.15.13,<0.16"]

[tool.uv]
default-groups = [
    "develop",
    "test",
]
link-mode = "copy"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.uv.build-backend]
module-name = "netdisco"
module-root = ""
