[project]
name = "netdisco"
version = "1.0.0"
description = "Python code and dependencies for Netdisco"
authors = [{ name = "Netdisco Developers" }]
requires-python = ">=3.10"
dependencies = [
    "yamllint>=1.38.0,<2",
    "yamale>=6.1.0,<7",
    "netmiko>=4.7.0,<5",
    "cryptography>=48.0.0,<49",
    "virtualenv>=21.4.1",
    "sqlalchemy>=2.0.50,<3",
    "psycopg>=3.3.4,<4",
    "uv-build>=0.11.17,<0.12.0",
]

[project.scripts]
run_worklet = "netdisco.runner:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
develop = ["pre-commit>=4.6.0,<5"]
test = ["ruff>=0.15.15,<0.16"]

[tool.uv]
default-groups = [
    "develop",
    "test",
]
link-mode = "copy"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.uv.build-backend]
module-name = "netdisco"
module-root = ""
